--- a/src/style.css
+++ b/src/style.css
@@ -1,2 +1,6 @@
-html body { margin: unset }
+html body {
+  margin: unset;
+  width: 100%;
+  height: 100%;
+}
 h1,h2,h3,h4,h5,h6,p {margin: unset;}
